# simpleTPV

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .lintstagedrc.json  .npmrc  .prettierignore  .trivyignore.yaml  CLAUDE.md  DESIGN.md  DESIGN_SYSTEM.md  PRD_TPV_Multitienda.md  PRODUCT.md  Plan_Desarrollo_MVP.md  README.md  coverage-threshold.json  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  k.pub  knip.json  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
crates/: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/ai/: Cargo.toml
crates/ai/src/: anthropic.rs  event.rs  lib.rs  openai.rs  pricing.rs  tools.rs
crates/app/: Cargo.toml
crates/app/migrations/: 20260527233947_add_rls.sql  20260528065732_product_families.sql  20260528095500_sales.sql  20260528140000_sale_void.sql  20260528150000_cash_sessions.sql  20260528162206_stock_base.sql  20260528170337_transfers.sql  20260528201442_suppliers_purchases.sql  20260528204427_verifactu.sql  20260530133225_week7_perf_indexes.sql  20260603110000_tpv_operational_flows.sql  20260603120000_refresh_tokens.sql  20260605163332_saleline_cost_source.sql  20260606090657_b2b_wholesale.sql  20260606092916_api_key.sql  20260608120000_store_price.sql  20260608140000_feature_flag.sql  20260608150000_promotion.sql  20260616120001_rls_with_check.sql  20260616120002_userstore_rls.sql  20260620120000_chat.sql  20260623130000_sale_customer_fiscal.sql  20260623140000_promotion_advanced.sql  20260626120000_sale_cobro.sql  20260626140000_customer_b2b_crm_cobro.sql  20260628120000_transfer_attachment.sql  20260628130000_transfer_message.sql  20260629140000_verifactu_immutable.sql  20260629170000_support_tickets.sql  20260630120000_cash_closing_note.sql  20260701120000_supplier_order_frequency.sql
crates/app/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: claims.rs  config.rs  jwt.rs  lib.rs  password.rs  service.rs  user_state.rs
crates/auth/tests/: auth.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  pool.rs  tenant.rs
crates/db/tests/: rls.rs
crates/domain/: Cargo.toml
crates/domain/src/: cache.rs  csv.rs  lib.rs  pg_enum.rs  receipt.rs  serde_helpers.rs  store_access.rs
crates/domain/src/api_keys/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/branding/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/cash_sessions/: domain.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/chat/: context.rs  mod.rs  model.rs  service.rs  tool_dispatch.rs
crates/domain/src/customers/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/dashboard/: mod.rs  model.rs  period.rs  service.rs
crates/domain/src/devices/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/feature_flags/: catalog.rs  mod.rs  model.rs  service.rs
crates/domain/src/me/: mod.rs  model.rs  preferences.rs  service.rs
crates/domain/src/price_lists/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/product_families/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/products/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/promotions/: apply.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/public/: mod.rs  model.rs  service.rs
crates/domain/src/purchases/: domain.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/returns/: domain.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/sales/: domain.rs  export.rs  export_service.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/stock/: domain.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/stores/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/suppliers/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/support/: mod.rs  model.rs  service.rs
crates/domain/src/time_clock/: compute.rs  input.rs  mod.rs  model.rs  service.rs
crates/domain/src/transfers/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/users/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/verifactu/: cert.rs  config.rs  hash.rs  mod.rs  queue.rs  record.rs  verify.rs
crates/domain/src/verifactu/aeat/: client.rs  crypto.rs  mod.rs  response.rs  worker.rs  xml.rs
crates/domain/src/wholesale_orders/: input.rs  mod.rs  model.rs  service.rs
crates/domain/src/z_report/: domain.rs  mod.rs  model.rs  service.rs
crates/domain/tests/: api_keys.rs  branding.rs  cash_sessions.rs  chat.rs  customers.rs  dashboard.rs  devices.rs  fase4_rls.rs  feature_flag_blind.rs  feature_flags_mgmt.rs  me.rs  price_lists.rs  product_families.rs  products_rls.rs  promotions.rs  promotions_apply.rs  purchases.rs  returns_blind.rs  returns_rls.rs  sales_cobro.rs  sales_export.rs  sales_rls.rs  sales_stats.rs  sales_ticket_receipt.rs  sales_totals.rs  stock_global.rs  stock_reads.rs  stock_rls.rs  stores.rs  suppliers.rs  time_clock.rs  transfers.rs  users.rs  verifactu_aeat_worker.rs  verifactu_anulacion.rs  verifactu_f1.rs  verifactu_immutable.rs  verifactu_invoice.rs  verifactu_queue.rs  verifactu_rectification.rs  (+4 more)
crates/http/: Cargo.toml
crates/http/src/: api_key_extractor.rs  api_keys.rs  audit.rs  branding.rs  cash_sessions.rs  chat.rs  chat_system_prompt.txt  customers.rs  dashboard.rs  devices.rs  error.rs  events.rs  extractor.rs  feature_flags.rs  json.rs  lib.rs  me.rs  openapi.rs  price_lists.rs  product_families.rs  products.rs  promotions.rs  public.rs  purchases.rs  returns.rs  router.rs  routes.rs  sales.rs  sales_export.rs  state.rs  stock.rs  stores.rs  suppliers.rs  support.rs  time_clock.rs  transfers.rs  users.rs  verifactu.rs  wholesale_orders.rs  z_report.rs
crates/http/tests/: audit_http.rs  auth_http.rs  chat_http.rs  fase3_roles_http.rs  openapi_http.rs  products_http.rs  public_api_key_http.rs  returns_http.rs  sales_http.rs  stock_http.rs  verifactu_http.rs
crates/scripts/: test-rls.sh
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  limits.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
(+936 files in other folders)
