[workspace]
resolver = "2"
members = ["shared", "db", "auth", "domain", "http", "app"]

# Migración del backend a Rust — workspace Cargo.
# Arquitectura por capas (ver docs/migration-rust/02 §3):
#   shared  → tipos comunes: config (fail-fast), errores (thiserror)
#   db      → SQLx: pool + transacción RLS por tenant (set_config $1, true)
#   auth    → JWT (HS256), bcrypt, rotación de refresh (dominio, Fase 1)
#   http    → Axum: router, extractor AuthUser, IntoResponse, cookies, rutas /auth
#   app     → bootstrap: Axum + Tokio + tracing + graceful shutdown
# La capa domain se añade en fases posteriores (02 §4).

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "UNLICENSED"
publish = false

# Versiones centralizadas (DRY). Cada crate las consume con `dep.workspace = true`.
# Todas las crates y su justificación documentadas en docs/migration-rust/02-08.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "timeout",
  "set-header",
  "sensitive-headers",
  "limit",
] }
# Rate limiting por IP (tower_governor, doc 06 — login 5/min). SmartIpKeyExtractor
# lee X-Forwarded-For tras el proxy.
tower_governor = "0.7"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "macros",
  "rust_decimal",
  "time",
] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
# Decimal contable (NUMERIC) — nunca float para dinero/cantidades (invariante 02 §2).
# Salida JSON como string (paridad con Prisma Decimal); entrada desde número JSON.
rust_decimal = { version = "1", features = ["serde-with-str", "serde-with-float"] }
# Fechas (TIMESTAMP) para FromRow + serialización ISO-8601.
time = { version = "0.3", features = ["serde-well-known", "formatting", "macros"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
secrecy = "0.10"
# Auth (Fase 1, doc 06). jsonwebtoken HS256 (interop con el backend NestJS
# durante el corte); bcrypt para verificar los hashes existentes (cost 10).
jsonwebtoken = "9"
bcrypt = "0.15"

# Perfil de release: binario pequeño y rápido (corte en producción, doc 02 §4 Fase 6).
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
