[workspace]
resolver = "2"
members = ["shared", "db", "auth", "domain", "http", "app", "ai", "telegram"]

# Migración del backend a Rust — workspace Cargo.
# Arquitectura por capas (ver docs/migration-rust/02 §3):
#   shared  → tipos comunes: config (fail-fast), errores (thiserror)
#   db      → SQLx: pool + transacción RLS por tenant (set_config $1, true)
#   auth    → JWT (HS256), bcrypt, rotación de refresh (dominio, Fase 1)
#   http    → Axum: router, extractor AuthUser, IntoResponse, cookies, rutas /auth
#   app     → bootstrap: Axum + Tokio + tracing + graceful shutdown
# La capa domain se añade en fases posteriores (02 §4).

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "UNLICENSED"
publish = false

# Versiones centralizadas (DRY). Cada crate las consume con `dep.workspace = true`.
# Todas las crates y su justificación documentadas en docs/migration-rust/02-08.
[workspace.dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
  "time",
] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "timeout",
  "set-header",
  "sensitive-headers",
  "limit",
] }
# Rate limiting por IP (tower_governor, doc 06 — login 5/min). SmartIpKeyExtractor
# lee X-Forwarded-For tras el proxy.
tower_governor = "0.7"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "macros",
  "migrate",
  "rust_decimal",
  "time",
] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
# Decimal contable (NUMERIC) — nunca float para dinero/cantidades (invariante 02 §2).
# Salida JSON como string (paridad con Prisma Decimal); entrada desde número JSON.
rust_decimal = { version = "1", features = ["serde-with-str", "serde-with-float"] }
# Fechas (TIMESTAMP) para FromRow + serialización ISO-8601.
time = { version = "0.3", features = ["serde-well-known", "formatting", "macros"] }
# Zona horaria IANA (Europe/Madrid con DST) para el documento fiscal (#152) —
# evita hardcodear el offset CET/CEST, frágil ante cambios de horario de verano.
time-tz = { version = "2", features = ["db"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
secrecy = "0.10"
# Auth (Fase 1, doc 06). jsonwebtoken HS256 (interop con el backend NestJS
# durante el corte); bcrypt para verificar los hashes existentes (cost 10).
# v10 exige elegir CryptoProvider: fijamos `rust_crypto` (puro Rust, sin C ni
# provider global de rustls) para que HMAC funcione siempre — si no, jsonwebtoken
# entra en pánico «Could not automatically determine the CryptoProvider».
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.15"
# Hash encadenado de los registros VeriFactu (#152/#155): SHA-256.
sha2 = "0.10"
# QR de cotejo VERI*FACTU en el ticket (#156): render SVG. `default-features=false`
# para NO arrastrar la pesada crate `image` (solo necesitamos SVG, nivel M).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Parseo del XML de respuesta del servicio web VERI*FACTU de la AEAT (#156).
quick-xml = "0.40"
# Cifrado en reposo del certificado de cliente PEM (#156, Fase 8): AES-256-GCM.
aes-gcm = "0.11"
# HTTP cliente para las llamadas a los providers LLM (OpenAI, Anthropic) — streaming SSE.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# SSE generado en Rust (elevado desde http crate que lo tenía como dep local).
async-stream = "0.3"
# Stream combinators para los events SSE.
futures = "0.3"
# Mapa concurrente para rate-limit por userId en el handler de chat.
dashmap = "6"
# CancellationToken para abortar tasks de LLM en el handler.
tokio-util = { version = "0.7", features = ["sync"] }

# Perfil de release: binario pequeño y rápido (corte en producción, doc 02 §4 Fase 6).
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
