[package]
name = "simpletpv-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
simpletpv-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
reqwest = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rust_decimal.workspace = true
