[package]
name = "simpletpv-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "simpletpv-api"
path = "src/main.rs"

[dependencies]
simpletpv-shared = { path = "../shared" }
simpletpv-db = { path = "../db" }
simpletpv-auth = { path = "../auth" }
simpletpv-http = { path = "../http" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true
