[package]
name = "simpletpv-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "simpletpv-api"
path = "src/main.rs"

[dependencies]
simpletpv-shared = { path = "../shared" }
simpletpv-db = { path = "../db" }
simpletpv-auth = { path = "../auth" }
simpletpv-domain = { path = "../domain" }
simpletpv-http = { path = "../http" }
simpletpv-ai = { path = "../ai" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true
# Observabilidad (#155): errores/panics + integración con `tracing`. Transporte
# sobre rustls (coherente con sqlx); no-op sin SENTRY_DSN. `send_default_pii`
# desactivado: nada de secretos/PII a Sentry.
  sentry = { version = "0.38", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "tracing",
    "reqwest",
    "rustls",
  ] }
  sqlx = { workspace = true }
