[package]
name = "simpletpv-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
simpletpv-shared = { path = "../shared" }
simpletpv-db = { path = "../db" }
simpletpv-auth = { path = "../auth" }
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
rust_decimal.workspace = true
serde_json = "1"
time.workspace = true
time-tz.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
bcrypt.workspace = true
