[package]
name = "simpletpv-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
simpletpv-shared = { path = "../shared" }
simpletpv-db = { path = "../db" }
simpletpv-auth = { path = "../auth" }
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
rust_decimal.workspace = true
serde_json = "1"
sha2.workspace = true
time.workspace = true
time-tz.workspace = true
tracing.workspace = true
# Caché de stock (#155, #28): cliente Redis async degradable + OnceCell/timeout.
tokio = { workspace = true, features = ["sync", "time"] }
redis = { version = "0.32", default-features = false, features = [
  "tokio-comp",
  "tokio-rustls-comp",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
bcrypt.workspace = true
