[package]
name = "simpletpv-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
simpletpv-shared = { path = "../shared" }
simpletpv-db = { path = "../db" }
simpletpv-auth = { path = "../auth" }
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
rust_decimal.workspace = true
serde_json = "1"
sha2.workspace = true
# QR de cotejo VERI*FACTU en el documento fiscal (#156).
qrcode.workspace = true
# Parseo del XML de respuesta de la AEAT (#156).
quick-xml.workspace = true
# Cliente SOAP/mTLS hacia el servicio web de la AEAT (#156, Fase 4). rustls + identidad
# de cliente (PEM); sin native-tls (coherente con el resto del stack).
reqwest.workspace = true
# Cifrado en reposo del certificado de cliente (#156, Fase 8): AES-256-GCM.
aes-gcm.workspace = true
time.workspace = true
time-tz.workspace = true
tracing.workspace = true
# Caché de stock (#155, #28): cliente Redis async degradable + OnceCell/timeout.
tokio = { workspace = true, features = ["sync", "time"] }
redis = { version = "0.32", default-features = false, features = [
  "tokio-comp",
  "tokio-rustls-comp",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
bcrypt.workspace = true
