[package]
name = "simpletpv-telegram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
reqwest = { workspace = true }
